fix: Script builder display fixes on smaller screen sizes

--- a/css/script-builder.css
+++ b/css/script-builder.css
@@ -1,17 +1,9 @@
-.script_builder_transform {
-    -webkit-transition: height 200ms linear;
-    -moz-transition: height 200ms linear;
-    -o-transition: height 200ms linear;
-    -ms-transition: height 200ms linear;
-    transition: height 200ms linear;
-}
-
 .script_builder_expanded {
     height: 400px;
 }
 
 .script_builder_hidden {
-    height: 64px;
+    max-height: 64px;
 }
 
 .parlay-script-builder-toolbar {
